@@ -4,7 +4,7 @@
 clean:
 	rm -f *core *[%~] *.[oa]
 	rm -f .[a-z]*~
-	rm -f spblaze$(EXEEXT)
+	rm -f spblaze$(EXEEXT) spblaze.exe ucsim_spblaze.exe
 
 
 # Deleting all files created by configuring or building the program
